[workspace]
resolver = "2"
members = [
    "crates/holoconf-core",
    "crates/holoconf-python",
    "crates/holoconf-cli",
    "crates/holoconf-aws",
    "crates/holoconf-aws-python",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfestag/holoconf"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
holoconf-core = { version = "0.3", path = "crates/holoconf-core" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
jsonschema = "0.29"
regex = "1.11"
base64 = "0.22"
log = "0.4"

# Async
tokio = { version = "1.0", features = ["full"] }

# Testing
pretty_assertions = "1.4"
