[workspace]
resolver = "2"
members = [
    "crates/holoconf-core",
    "crates/holoconf-python",
    "crates/holoconf-cli",
    "crates/holoconf-aws",
    "crates/holoconf-aws-python",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfestag/holoconf"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
holoconf-core = { version = "0.5", path = "crates/holoconf-core" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
jsonschema = "0.29"
regex = "1.11"
base64 = "0.22"
log = "0.4"

# Async
tokio = { version = "1.0", features = ["full"] }

# Testing
pretty_assertions = "1.4"

# =============================================================================
# Release Profile - Optimized for Size
# =============================================================================
[profile.release]
# Strip debug symbols from binaries (reduces size by 10-20x)
strip = true

# Enable Link-Time Optimization (better dead code elimination)
lto = true

# Use single codegen unit for better optimization (slower build, smaller binary)
codegen-units = 1

# Optimize for size instead of speed
opt-level = "z"

# Use abort on panic instead of unwinding (smaller binary)
panic = "abort"
