[package]
name = "holoconf-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AWS resolvers for holoconf (SSM Parameter Store)"
readme = "README.md"
documentation = "https://rfestag.github.io/holoconf/"
keywords = ["config", "configuration", "aws", "ssm", "resolver"]
categories = ["config", "development-tools"]

[features]
default = ["ssm"]
ssm = ["aws-sdk-ssm", "aws-config"]

[dependencies]
holoconf-core = { path = "../holoconf-core" }
# AWS SDK dependencies
aws-sdk-ssm = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
pretty_assertions.workspace = true
