[package]
name = "holoconf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for holoconf configuration management"

[lib]
name = "holoconf_cli"
path = "src/lib.rs"

[[bin]]
name = "holoconf"
path = "src/main.rs"

[dependencies]
holoconf-core = { path = "../holoconf-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "3.0"
