[package]
name = "holoconf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core configuration library with resolver support"
readme = "README.md"
documentation = "https://rfestag.github.io/holoconf/"
keywords = ["config", "configuration", "yaml", "resolver"]
categories = ["config", "development-tools"]

[package.metadata.cargo-machete]
# These dependencies are planned for future features
ignored = ["regex", "thiserror", "ureq"]

[features]
default = []
http = ["ureq"]

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
jsonschema.workspace = true
regex.workspace = true
# Optional HTTP support
ureq = { version = "3.0", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
