[package]
name = "holoconf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core configuration library with resolver support"
readme = "README.md"
documentation = "https://rfestag.github.io/holoconf/"
keywords = ["config", "configuration", "yaml", "resolver"]
categories = ["config", "development-tools"]

[package.metadata.cargo-machete]
# thiserror is used via derive macro (not directly referenced)
ignored = ["thiserror"]

[features]
default = []
http = ["ureq", "url", "pkcs8", "p12-keystore"]

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
jsonschema.workspace = true
base64.workspace = true
log.workspace = true
glob = "0.3"
csv = "1.3"

# Optional HTTP support with TLS/proxy (uses rustls + aws-lc-rs for FIPS compliance)
ureq = { version = "3.0", features = ["socks-proxy"], optional = true }
url = { version = "2.5", optional = true }

# Encrypted PKCS#8 key support
pkcs8 = { version = "0.10", features = ["encryption", "pem"], optional = true }

# P12/PFX (PKCS#12) support
p12-keystore = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
mockito = "1.2"
