[package]
name = "holoconf-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Python bindings for holoconf configuration library"

[lib]
name = "_holoconf"
crate-type = ["cdylib"]

[dependencies]
holoconf-core = { workspace = true, features = ["http"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
indexmap = "2.7"
